# systematic-crypto-options-trading

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/: copilot-instructions.md
configs/: config.py
data/: .gitkeep
documentation/: DOCKER.md  TASKS.md  TECH.md
examples/: README.md
examples/stream_btc_futures_deribit/: .gitignore  data.ipynb  stream_btc_futures_deribit.py
examples/stream_perpetuals_deribit/: .gitignore  stream_futures_deribit.py
llm-instructions/: README.md  TASKS.md
llm-instructions/templates/: backend-architect.md  data-engineer.md  ml-engineer.md  quant-analyst.md  rust-pro.md
notebooks/: 00_getting_started.ipynb
notebooks/backtesting/: volatility_arbitrage_backtest.ipynb
notebooks/examples/stream_btc_futures_deribit/: README.md  data.ipynb  stream_btc_futures_deribit.py
notebooks/examples/stream_perpetuals_deribit/: README.md  stream_futures_deribit.py
notebooks/exploratory/: volatility_surface_analysis.ipynb
references/models/: __init__.py  greeks.py  pricing.py  volatility.py
references/risk/: __init__.py  limits.py  metrics.py
references/strategies/: __init__.py  base.py  delta_neutral.py  volatility.py
src/: __init__.py
src/data/: __init__.py
src/data/ccxt_collector/: README.md  __init__.py  ccxt_collector.py  storage.py
src/data/ccxt_collector/schema/: README.md  __init__.py
src/data/ccxt_collector/schema/deribit/: README.md  __init__.py  spot.py  (+2 more)
src/logging/: __init__.py  logger.py
src/utils/: __init__.py  date_utils.py  math_utils.py  plotting.py
tests/: test_ccxt_setup.py
